[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
alloy = { version = "1.1.3", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# logging
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = "0.4.42"
